# leaksignal-operator

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.arm64v8  Dockerfile.ubi  README.md  publish-test.sh  publish.sh
chart/: Chart.yaml  values.schema.json  values.yaml
chart/crds/: leaksignal-cluster-crd.yaml  leaksignal-crd.yaml
chart/templates/: _helpers.tpl  deployment.yaml  ganesha.yaml  imagepullsecret.yaml  priority-class.yaml  rbac.yaml  service.yaml
examples/: olm-subscription.yaml  tap.yaml
olm/: olm-catalog-source.yaml  publish_bundle.sh
olm/catalog/: bundle.yaml  channel.yaml  package.yaml
olm/manifests/: leaksignal-cluster.crd.yaml  leaksignal.clusterserviceversion.yaml  leaksignal.crd.yaml
src/: envoy_json.rs  ganesha.rs  intercept.rs  istio.rs  leaktap.rs  main.rs  native.rs  pod_scan.rs  proxy_mgr.rs  webhook.rs
