[package]
name = "leaksignal-operator"
version = "1.3.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.82", default-features = true, features = ["derive", "runtime"] }
k8s-openapi = { version = "0.18", default-features = false, features = ["v1_23"] }
futures = "0.3"
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1"
log = "0.4.18"
env_logger = "0.10.0"
