[package]
name = "leaksignal-operator"
version = "1.4.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.82", default-features = true, features = ["derive", "runtime", "admission"] }
k8s-openapi = { version = "0.18", default-features = false, features = ["v1_23"] }
futures = "0.3"
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1"
log = "0.4.18"
env_logger = "0.10.0"
rcgen = "0.12.1"
warp = { version = "0.3", default-features = false, features = ["tls"] }
json-patch = "1.2"
base64 = "0.21"
chrono = "0.4"
url = { version = "2.5", features = ["serde"] }