[package]
name = "leaksignal-operator"
version = "1.8.1"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
kube = { version = "0.88.1", default-features = true, features = ["derive", "runtime", "admission", "rustls-tls"] }
k8s-openapi = { version = "0.21", default-features = false, features = ["v1_25"] }
futures = "0.3"
serde = "1"
serde_json = "1.0"
schemars = "0.8"
thiserror = "1"
log = "0.4.18"
env_logger = "0.10.0"
rcgen = "0.13.1"
warp = { version = "0.3", default-features = false, features = ["tls"] }
json-patch = "1.2"
base64 = "0.21"
chrono = "0.4"
url = { version = "2.5", features = ["serde"] }
lazy_static = "1.4"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls-webpki-roots"] }
sha2 = "0.10"
hex = "0.4"
async-trait = "0.1"
sha1 = "0.10.6"
bcder = "0.7.3"
x509-certificate = "0.23.1"
bytes = "1.6"